--- a/Cargo.toml
+++ b/Cargo.toml
@@ -375,6 +375,7 @@ num_cpus = "1.13.1"
 num-derive = "0.3.3"
 num-traits = "0.2.15"
 once_cell = "1.10.0"
+owo-colors = "3.5.0"
 parking_lot = "0.12.0"
 paste = "1.0.7"
 pbjson = "0.4.0"
