--- a/storage/aptosdb/Cargo.toml
+++ b/storage/aptosdb/Cargo.toml
@@ -36,6 +36,7 @@ arc-swap = { workspace = true }
 arr_macro = { workspace = true }
 bcs = { workspace = true }
 byteorder = { workspace = true }
+clap = { workspace = true, optional = true }
 dashmap = { workspace = true }
 itertools = { workspace = true }
 lru = { workspace = true }
@@ -43,6 +44,7 @@ move-core-types = { workspace = true }
 move-resource-viewer = { workspace = true }
 num-derive = { workspace = true }
 once_cell = { workspace = true }
+owo-colors = { workspace = true, optional = true }
 proptest = { workspace = true, optional = true }
 proptest-derive = { workspace = true, optional = true }
 rayon = { workspace = true }
@@ -66,3 +68,9 @@ rand = { workspace = true }
 default = []
 fuzzing = ["proptest", "proptest-derive", "aptos-proptest-helpers", "aptos-temppath", "aptos-crypto/fuzzing", "aptos-jellyfish-merkle/fuzzing", "aptos-types/fuzzing", "aptos-executor-types/fuzzing", "aptos-schemadb/fuzzing", "aptos-scratchpad/fuzzing"]
 consensus-only-perf-test = []
+db-debugger = ["aptos-temppath", "clap", "owo-colors"]
+
+[[bin]]
+name = "db-debugger"
+path = "src/db_debugger/main.rs"
+required-features = ["db-debugger"]
