--- a/crates/aptos-telemetry-service/Cargo.toml
+++ b/crates/aptos-telemetry-service/Cargo.toml
@@ -18,6 +18,7 @@ aptos-crypto = { path = "../../crates/aptos-crypto" }
 aptos-crypto-derive = { path = "../../crates/aptos-crypto-derive" }
 aptos-infallible = { path = "../../crates/aptos-infallible" }
 aptos-logger = { path = "../../crates/aptos-logger" }
+aptos-metrics-core = { path = "../../crates/aptos-metrics-core" }
 aptos-rest-client = { path = "../../crates/aptos-rest-client" }
 aptos-types = { path = "../../types" }
 
@@ -26,10 +27,12 @@ base64 = "0.13.0"
 bcs = { git = "https://github.com/aptos-labs/bcs", rev = "2cde3e8446c460cb17b0c1d6bac7e27e964ac169" }
 chrono = "0.4"
 clap = "3.1.8"
+debug-ignore = { version = "1.0.3", features = ["serde"] }
 flate2 = "1.0.24"
 gcp-bigquery-client = "0.13"
 hex = "0.4.3"
 jsonwebtoken = "8.1"
+once_cell = "1.10.0"
 prometheus = { version = "0.13.1", default-features = false }
 rand = "0.7.3"
 rand_core = { version = "0.5.1", default-features = false }
