[network] Use URL as input for Rest Discovery instead of string

--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -31,6 +31,7 @@ rand = { workspace = true }
 serde = { workspace = true }
 serde_yaml = { workspace = true }
 thiserror = { workspace = true }
+url = { workspace = true }
 
 [dev-dependencies]
 aptos-crypto = { workspace = true }
