--- a/terraform/helm/aptos-node/values.yaml
+++ b/terraform/helm/aptos-node/values.yaml
@@ -31,23 +31,18 @@ haproxy:
     pullPolicy: IfNotPresent
   resources:
     limits:
-      cpu: 4
-      memory: 8Gi
+      cpu: 1.5
+      memory: 2Gi
     requests:
-      cpu: 4
-      memory: 8Gi
+      cpu: 1.5
+      memory: 2Gi
   nodeSelector: {}
   tolerations: []
   affinity: {}
   limits:
     validator:
-      # -- Limit the number of connections per IP address per sec
+      # -- Limit the number of connections per IP address per minute
       connectionsPerIPPerMin: 2
-      # Sustained 100mb/s for 10 sec.
-      maxBytesOutRate10sec: 134217728
-      rateLimitSession: 256
-      tcpBufSize: 524288
-
   config:
     # -- Whether to send Proxy Protocol v2
     send_proxy_protocol: &send_proxy_protocol false
