--- a/aptos-move/aptos-vm/Cargo.toml
+++ b/aptos-move/aptos-vm/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 anyhow = "1.0.57"
 aptos-crypto = { path = "../../crates/aptos-crypto" }
 aptos-crypto-derive = { path = "../../crates/aptos-crypto-derive" }
-bcs = "0.1.3"
+bcs = { git = "https://github.com/aptos-labs/bcs", rev = "f94869cdfa1b5d2c9892016e8fb0c59fda1eea2d" }
 dashmap = "5.2.0"
 fail = "0.5.0"
 num_cpus = "1.13.1"
