--- a/aptos-move/framework/cached-packages/Cargo.toml
+++ b/aptos-move/framework/cached-packages/Cargo.toml
@@ -11,7 +11,7 @@ publish = false
 
 [dependencies]
 aptos-types = { path = "../../../types" }
-bcs = "0.1.3"
+bcs = { git = "https://github.com/aptos-labs/bcs", rev = "f94869cdfa1b5d2c9892016e8fb0c59fda1eea2d" }
 framework = { path = ".." }
 include_dir = { version = "0.7.2", features = ["glob"] }
 once_cell = "1.10.0"
