--- a/crates/aptos-rest-client/Cargo.toml
+++ b/crates/aptos-rest-client/Cargo.toml
@@ -15,7 +15,7 @@ dpn = []
 
 [dependencies]
 anyhow = "1.0.57"
-bcs = "0.1.3"
+bcs = { git = "https://github.com/aptos-labs/bcs", rev = "f94869cdfa1b5d2c9892016e8fb0c59fda1eea2d" }
 bytes = "1.2.1"
 futures = "0.3.17"
 hex = "0.4.3"
