--- a/crates/aptos-rosetta/Cargo.toml
+++ b/crates/aptos-rosetta/Cargo.toml
@@ -20,7 +20,7 @@ aptos-rest-client = { path = "../aptos-rest-client" }
 aptos-sdk = { path = "../../sdk" }
 aptos-types = { path = "../../types" }
 aptos-warp-webserver = { path = "../aptos-warp-webserver" }
-bcs = "0.1.3"
+bcs = { git = "https://github.com/aptos-labs/bcs", rev = "f94869cdfa1b5d2c9892016e8fb0c59fda1eea2d" }
 cached-packages = { path = "../../aptos-move/framework/cached-packages" }
 clap = "3.1.18"
 futures = "0.3.17"
