--- a/crates/aptos-telemetry-service/Cargo.toml
+++ b/crates/aptos-telemetry-service/Cargo.toml
@@ -21,7 +21,7 @@ aptos-types = { path = "../../types" }
 
 anyhow = "1.0.57"
 base64 = "0.13.0"
-bcs = "0.1.3"
+bcs = { git = "https://github.com/aptos-labs/bcs", rev = "f94869cdfa1b5d2c9892016e8fb0c59fda1eea2d" }
 chrono = "0.4"
 clap = "3.1.8"
 flate2 = "1.0.24"
