--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -14,7 +14,7 @@ anyhow = "1.0.57"
 bcs = { git = "https://github.com/aptos-labs/bcs", rev = "f94869cdfa1b5d2c9892016e8fb0c59fda1eea2d" }
 chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
 hex = "0.4.3"
-itertools = { version = "0.10.3", default-features = false }
+itertools = { version = "0.10.3" }
 num-derive = "0.3.3"
 num-traits = "0.2.15"
 once_cell = "1.10.0"
