--- a/execution/executor/Cargo.toml
+++ b/execution/executor/Cargo.toml
@@ -19,6 +19,7 @@ rayon = "1.5.2"
 serde = { version = "1.0.137", features = ["derive"] }
 
 aptos-crypto = { path = "../../crates/aptos-crypto" }
+aptos-gas = { path = "../../aptos-move/aptos-gas" }
 aptos-infallible = { path = "../../crates/aptos-infallible" }
 aptos-logger = { path = "../../crates/aptos-logger" }
 aptos-metrics-core = { path = "../../crates/aptos-metrics-core" }
