lock cargo lock file to prevent it being out-of-date (#4880)

--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -77,7 +77,7 @@ jobs:
         with:
           fetch-depth: 0 # get all the history because cargo xtest --change-since origin/main requires it.
       - uses: ./.github/actions/rust-setup
-      - run: cargo test --doc --workspace --exclude aptos-node-checker
+      - run: cargo test --locked --doc --workspace --exclude aptos-node-checker
 
   rust-unit-test:
     runs-on: high-perf-docker
@@ -90,7 +90,7 @@ jobs:
       - uses: taiki-e/install-action@v1.5.6
         with:
           tool: nextest
-      - run: cargo nextest run --profile ci --workspace --exclude smoke-test --exclude testcases --retries 3 --no-fail-fast
+      - run: cargo nextest run --profile ci --locked --workspace --exclude smoke-test --exclude testcases --retries 3 --no-fail-fast
         env:
           INDEXER_DATABASE_URL: postgresql://postgres@localhost/postgres
 
@@ -105,7 +105,7 @@ jobs:
           tool: nextest
       # prebuild node binary, so that tests don't start before node is built.
       # --test-threads is intentionally set to reduce resource contention in ci jobs. Increasing this, increases job failures and retries.
-      - run: cargo build --bin=aptos-node --features=failpoints,indexer --release && LOCAL_SWARM_NODE_RELEASE=1 cargo nextest run --release --profile ci --package smoke-test --test-threads 6 --retries 3
+      - run: cargo build --locked --bin=aptos-node --features=failpoints,indexer --release && LOCAL_SWARM_NODE_RELEASE=1 cargo nextest run --release --profile ci --package smoke-test --test-threads 6 --retries 3
         env:
           INDEXER_DATABASE_URL: postgresql://postgres@localhost/postgres
 
@@ -125,7 +125,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/rust-setup
-      - run: cargo test --features check-vm-features -p aptos-node
+      - run: cargo test --locked --features check-vm-features -p aptos-node
 
   python-unit-test:
     uses: ./.github/workflows/python-unit-test.yaml
