--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -18,6 +18,7 @@ fail = "0.5.0"
 futures = "0.3.21"
 hex = "0.4.3"
 hyper = "0.14.18"
+itertools = "0.10.3"
 mime = "0.3.16"
 once_cell = "1.10.0"
 paste = "1.0.7"
