--- a/api/doc/spec.yaml
+++ b/api/doc/spec.yaml
@@ -6929,6 +6929,16 @@ paths:
         required: false
         deprecated: false
         explode: true
+      - name: estimate_prioritized_gas_unit_price
+        schema:
+          type: boolean
+        in: query
+        description: |-
+          If set to true, the transaction will use a higher price than the original
+          estimate.
+        required: false
+        deprecated: false
+        explode: true
       requestBody:
         content:
           application/json:
@@ -8269,10 +8279,18 @@ components:
       required:
       - gas_estimate
       properties:
+        deprioritized_gas_estimate:
+          type: integer
+          format: uint64
+          description: The deprioritized estimate for the gas unit price
         gas_estimate:
           type: integer
           format: uint64
           description: The current estimate for the gas unit price
+        prioritized_gas_estimate:
+          type: integer
+          format: uint64
+          description: The prioritized estimate for the gas unit price
     GenesisPayload:
       type: object
       description: The writeset payload of the Genesis transaction
