--- a/.github/workflows/grafana-sync.yaml
+++ b/.github/workflows/grafana-sync.yaml
@@ -17,11 +17,11 @@ jobs:
   grafana-sync:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3
       - name: Pull and sync Grafana dashboards
         run: ./scripts/sync_grafana_dashboards.sh
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v4
+        uses: peter-evans/create-pull-request@671dc9c9e0c2d73f07fa45a3eb0220e1622f0c5f # pin@v4
         with:
           add-paths: dashboards
           title: "[dashboards] sync grafana dashboards"
