--- a/.github/workflows/nightly-replay-verify.yaml
+++ b/.github/workflows/nightly-replay-verify.yaml
@@ -11,7 +11,7 @@ on:
     - cron: "0 * * * */1"
   pull_request:
     paths:
-      - '.github/workflows/nightly-replay-verify.yaml'
+      - ".github/workflows/nightly-replay-verify.yaml"
 
 env:
   BUCKET: ${{ secrets.LLT_BACKUP_BUCKET }}
@@ -22,7 +22,7 @@ jobs:
     timeout-minutes: 720
     runs-on: high-perf-docker
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3
         with:
           ref: ${{ inputs.GIT_SHA }}
           fetch-depth: 0 # get all the history because cargo xtest --change-since origin/main requires it.
