--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -61,6 +61,14 @@ jobs:
       - run: yarn lint
         working-directory: developer-docs-site
 
+  rust-cryptohasher-domain-separation-check:
+    runs-on: high-perf-docker
+    steps:
+      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3
+      - uses: actions/setup-python@13ae5bb136fac2878aff31522b9efb785519f984
+      - uses: ./.github/actions/rust-setup
+      - run: python3 scripts/check-cryptohasher-symbols.py
+
   rust-lint:
     runs-on: high-perf-docker
     steps:
