[backup] push metrics to vmagent

--- a/terraform/helm/fullnode/templates/restore.yaml
+++ b/terraform/helm/fullnode/templates/restore.yaml
@@ -43,9 +43,9 @@ spec:
           value: "1"
         - name: STRUCT_LOG_TCP_ADDR
           value: {{ include "backup.loggingAddress" $ | quote }}
-        {{- if (include "backup.pushGateway" $) }}
+        {{- if (include "backup.pushMetricsEndpoint" $) }}
         - name: PUSH_METRICS_ENDPOINT
-          value: "{{- include "backup.pushGateway" $ }}/metrics/job/{{- .jobName | default "db_restore" }}"
+          value: "{{- include "backup.pushMetricsEndpoint" $ }}/api/v1/import/prometheus?extra_label=role={{- .jobName | default "db_restore" }}&extra_label=kubernetes_pod_name={{ include "backup.fullname" . }}-db-restore"
         {{- end }}
         - name: CONTROLLER_UID
           valueFrom:
