[build] switch to lld on linux (#4910)

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -23,3 +23,6 @@ xclippy = [
 
 [build]
 rustflags = ["--cfg", "tokio_unstable"]
+
+[target.x86_64-unknown-linux-gnu]
+rustflags = ["--cfg", "tokio_unstable", "-C", "link-arg=-fuse-ld=lld"]
