[tf/helm] various cleanups (#5202)
* [helm] readiness and liveness probes for api only

* [helm][monitoring] add grafana link to prometheus alerts and delete old
dashboard

* [tf/fullnode] public backups and gp2 support

* [helm][testnet-addons] rename fullnode subdomain to api

* [helm] readinessProbe with state sync duration_secs lag

* [tf/aws][fullnode] fix restore permissions

--- a/terraform/helm/fullnode/templates/fullnode.yaml
+++ b/terraform/helm/fullnode/templates/fullnode.yaml
@@ -74,13 +74,15 @@ spec:
           name: api
         - containerPort: 9101
           name: metrics
-        livenessProbe:
-          tcpSocket:
-            port: 9101
+        livenessProbe: # restart the pod if the REST API is ever unresponsive
+          httpGet:
+            path: /v1/-/healthy
+            port: 8080
           initialDelaySeconds: 30
-        readinessProbe:
-          tcpSocket:
-            port: 6182
+        readinessProbe: # pod is ready when state sync is caught up
+          httpGet:
+            path: /v1/-/healthy?duration_secs=10
+            port: 8080
         securityContext:
           readOnlyRootFilesystem: true
           allowPrivilegeEscalation: false
