--- a/terraform/helm/aptos-node/templates/fullnode.yaml
+++ b/terraform/helm/aptos-node/templates/fullnode.yaml
@@ -110,13 +110,14 @@ spec:
           name: api
         - containerPort: 9101
           name: metrics
-        livenessProbe:
-          tcpSocket:
-            port: 9101
-          initialDelaySeconds: 30
-        readinessProbe:
-          tcpSocket:
-            port: 6182
+        livenessProbe: # restart the pod if the REST API is ever unresponsive
+          httpGet:
+            path: /v1/-/healthy
+            port: 8080
+        readinessProbe: # pod is ready when state sync is caught up
+          httpGet:
+            path: /v1/-/healthy?duration_secs=10
+            port: 8080
         securityContext:
           {{- if $.Values.enablePrivilegedMode }}
           runAsUser: 0
