[artifacts] Add a test which ensures generated Move artifacts are up-to-date (#5226)
This uses the generated documentation as an indicator whether `cached-packages` has been built and therefore all generated artifacts in the depot are up-to-date.

--- a/aptos-move/framework/Cargo.toml
+++ b/aptos-move/framework/Cargo.toml
@@ -59,6 +59,8 @@ move-vm-types ={ workspace = true }
 
 [dev-dependencies]
 claims = "0.7"
+dir-diff = "0.3.2"
+fs_extra = "1.2.0"
 
 aptos-gas = { path = "../../aptos-move/aptos-gas" }
 aptos-vm = { path = "../../aptos-move/aptos-vm", features = ["testing"] }
