Ed25519 test only natives (#5272)
* decide when to load test-only natives

* passing the flag down

* passing the flag down

* load dummy test-only natives if flag set

* misc fix

* fix ci error

* ci fix

* ed25519 gen-sign-verify test

* fix lint

* misc fix

* fuzzing

* test fuzzing

* attempt

* attempt

* attempt

* attempt

* update

* update generate_keys return type

* update doc

* doc update

* more readable test case

* update other move test cases with new API

* update more move test cases with new API

* more update

* more update

* remove hardcoded alice keys and sigs

* update test_happy_path

* update minting

* tidy up

* tidy up

* update mint example

* use cfg instead

* testing feature e2e

* remove dead flag

* restore util functions

* tidy up

* tidy up

* lint fix

* tweak

--- a/aptos-move/aptos-vm/Cargo.toml
+++ b/aptos-move/aptos-vm/Cargo.toml
@@ -59,4 +59,4 @@ default = []
 mirai-contracts = []
 fuzzing = ["move-core-types/fuzzing", "move-binary-format/fuzzing", "move-vm-types/fuzzing", "framework/fuzzing"]
 failpoints = ["fail/failpoints", "move-vm-runtime/failpoints"]
-testing = ["move-unit-test"]
+testing = ["move-unit-test", "framework/testing"]
