[move] Fix artifact generation and test for pure Move development (#5297)
This moves the test for whether artifacts are up-to-date out of framework into its own crate. This is necessary so the test is not contaminated with dependencies to `cached-packages`. Moreover, `cached-packages` is introduced as a pseudo dev-dependency to framework. This ensures that artifacts are updated if tests are called on the framework. Overall, this should smoothen out the flow for folks which only change Move code. (Albeit, extra compile time for artifacts on `cargo test -p framework`, but that is unavoidable.)

--- a/aptos-move/framework/Cargo.toml
+++ b/aptos-move/framework/Cargo.toml
@@ -59,12 +59,11 @@ move-vm-types ={ workspace = true }
 rand_core = "0.5.1"
 
 [dev-dependencies]
-claims = "0.7"
-dir-diff = "0.3.2"
-fs_extra = "1.2.0"
-
 aptos-gas = { path = "../../aptos-move/aptos-gas" }
 aptos-vm = { path = "../../aptos-move/aptos-vm", features = ["testing"] }
+claims = "0.7"
+
+cached-packages = { path = "cached-packages" }  # keep to ensure build of artifacts
 move-cli = { workspace = true }
 move-prover = { workspace = true }
 
