[replay] Resurrect the debug tooling for aptos (#5320)
* [api] Add an api to get raw item of a table

* [replay] implement a replay tooling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "api/test-context",
     "api/types",
     "aptos-move/aptos-aggregator",
+    "aptos-move/aptos-debugger",
     "aptos-move/aptos-gas",
     "aptos-move/aptos-resource-viewer",
     "aptos-move/aptos-sdk-builder",
