--- a/aptos-move/aptos-validator-interface/Cargo.toml
+++ b/aptos-move/aptos-validator-interface/Cargo.toml
@@ -14,8 +14,12 @@ rust-version = { workspace = true }
 
 [dependencies]
 anyhow = "1.0.57"
+async-trait = "0.1.53"
+tokio = { version = "1.21.0", features = ["full"] }
 
+aptos-api-types = { path = "../../api/types" }
 aptos-config = { path = "../../config" }
+aptos-rest-client = { path = "../../crates/aptos-rest-client" }
 aptos-state-view = { path = "../../storage/state-view" }
 aptos-types = { path = "../../types" }
 
