--- a/testsuite/smoke-test/Cargo.toml
+++ b/testsuite/smoke-test/Cargo.toml
@@ -32,6 +32,7 @@ tokio = { version = "1.21.0", features = ["full"] }
 aptos = { path = "../../crates/aptos", features = ["fuzzing"] }
 aptos-config = { path = "../../config" }
 aptos-crypto = { path = "../../crates/aptos-crypto" }
+aptos-debugger = { path = "../../aptos-move/aptos-debugger" }
 aptos-faucet = { path = "../../crates/aptos-faucet" }
 aptos-gas = { path = "../../aptos-move/aptos-gas", features = ["testing"] }
 aptos-global-constants = { path = "../../config/global-constants", features = ["testing"] }
