make netlify preview land blocking for doc changes

--- a/.github/checkgroup.yml
+++ b/.github/checkgroup.yml
@@ -12,6 +12,7 @@ subprojects:
       - developer-docs-site/**
     checks:
       - docs-lint
+      - netlify/aptos-developer-docs/deploy-preview
   # everything, but docs
   - id: catch_all
     paths:
