cicd: fix regex in mergify config (#5687)

--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -21,7 +21,7 @@ pull_request_rules:
           - and:
               # for doc-only changes we only require docs-lint to pass
               - check-success=docs-lint
-              - -files~=^(!?developer-docs-site/)
+              - -files~=^(?!developer-docs-site/)
     actions:
       post_check:
         summary: |
