cicd: rename mergify check name to be more brief

--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -1,7 +1,7 @@
 # This defines the rules used by https://mergify.com/
 
 pull_request_rules:
-  - name: required status checks
+  - name: required checks
     conditions:
       - base=main
       - or:
